--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>David Freire | Portfólio Profissional</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>💼</text></svg>">
 </head>
 <body>
     <!-- Header -->
@@ -26,7 +27,7 @@
         </div>
     </header>
 
-    <!-- Hero Section -->
+    <!-- Hero Section com Foto de Perfil -->
     <section id="hero">
         <div class="container">
             <div class="hero-content">
@@ -41,7 +42,7 @@
                 </div>
                 <div class="hero-img">
                     <div class="profile-frame">
-                        <!-- Substitua a URL pela sua foto -->
+                        <!-- Substitua a URL abaixo pela sua foto -->
                         <img src="david.jpeg" alt="David Freire">
                     </div>
                 </div>
@@ -92,10 +93,10 @@
                         <div class="skill-bar">
                             <div class="skill-info">
                                 <span>Python</span>
-                                <span>70%</span>
+                                <span>65%</span>
                             </div>
                             <div class="skill-progress">
-                                <span style="width: 70%"></span>
+                                <span style="width: 65%"></span>
                             </div>
                         </div>
                     </div>
@@ -358,6 +359,11 @@
             </div>
         </div>
     </footer>
+
+    <!-- Botão Voltar ao Topo -->
+    <div class="back-to-top">
+        <i class="fas fa-arrow-up"></i>
+    </div>
 
     <script src="script.js"></script>
 </body>
