--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <h2 class="section-title">Sobre Mim</h2>
             <div class="about-content">
                 <div class="about-text">
-                    <p>Profissional multidisciplinar com mais de 12 anos de experiência em operações, logística, transporte e análises administrativas. Graduado em Análise e Desenvolvimento de Sistemas e cursando MBA em Data Science aplicada à Gestão.</p>
+                    <p>Profissional multidisciplinar com mais de 12 anos de experiência em operações, logística, transporte e análises administrativas. Graduado em Análise e Desenvolvimento de Sistemas | MBA em Data Science aplicada à Gestão | Cursando MBA Logística & Supply Chain.</p>
                     <p>Minha atuação é focada em automação de rotinas, análise de dados operacionais e visualização com Power BI e Excel. Possuo uma visão prática do chão de fábrica aliada ao domínio de ferramentas digitais para otimização de processos.</p>
                     <p>Combinando experiência prática e conhecimento técnico, busco transformar dados em insights acionáveis que impulsionem a eficiência operacional e a tomada de decisão estratégica.</p>
                 </div>
@@ -368,4 +368,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
