--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+9<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
@@ -265,7 +265,7 @@
                         </div>
                         <div class="contact-text">
                             <h3>Telefone</h3>
-                            <p>(18) 99880-58657</p>
+                            <p>(18) 98805-8657</p>
                         </div>
                     </div>
                     <div class="contact-item">
