--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-9<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
@@ -27,13 +27,13 @@
         </div>
     </header>
 
-    
+    <!-- Hero Section com Foto de Perfil -->
     <section id="hero">
         <div class="container">
             <div class="hero-content">
                 <div class="hero-text">
                     <h1>David Francisco Freire</h1>
-                    <h2>Analista de Dados & Desenvolvedor</h2>
+                    <h2>UI/UX Designer | Analista de Dados & Desenvolvedor</h2>
                     <p>Profissional multidisciplinar com mais de 12 anos de experiência em operações, logística, transporte e análises administrativas. Especialista em automação de rotinas e visualização de dados.</p>
                     <div class="hero-btns">
                         <a href="#portfolio" class="btn">Ver Portfólio</a>
@@ -42,7 +42,6 @@
                 </div>
                 <div class="hero-img">
                     <div class="profile-frame">
-                        <!-- Substitua a URL abaixo pela sua foto -->
                         <img src="david.jpeg" alt="David Freire">
                     </div>
                 </div>
@@ -56,7 +55,7 @@
             <h2 class="section-title">Sobre Mim</h2>
             <div class="about-content">
                 <div class="about-text">
-                    <p>Profissional multidisciplinar com mais de 12 anos de experiência em operações, logística, transporte e análises administrativas. Graduado em Análise e Desenvolvimento de Sistemas | MBA em Data Science aplicada à Gestão | Cursando MBA Logística & Supply Chain.</p>
+                    <p>Profissional multidisciplinar com mais de 12 anos de experiência em operações, logística, transporte e análises administrativas. Graduado em Análise e Desenvolvimento de Sistemas e cursando MBA em Data Science aplicada à Gestão.</p>
                     <p>Minha atuação é focada em automação de rotinas, análise de dados operacionais e visualização com Power BI e Excel. Possuo uma visão prática do chão de fábrica aliada ao domínio de ferramentas digitais para otimização de processos.</p>
                     <p>Combinando experiência prática e conhecimento técnico, busco transformar dados em insights acionáveis que impulsionem a eficiência operacional e a tomada de decisão estratégica.</p>
                 </div>
@@ -66,37 +65,64 @@
                         <div class="skill-bar">
                             <div class="skill-info">
                                 <span>Power BI</span>
-                                <span>80%</span>
+                                <span>60%</span>
                             </div>
                             <div class="skill-progress">
-                                <span style="width: 80%"></span>
+                                <span style="width: 60%;"></span>
                             </div>
                         </div>
                         <div class="skill-bar">
                             <div class="skill-info">
                                 <span>Excel Avançado</span>
-                                <span>90%</span>
+                                <span>70%</span>
                             </div>
                             <div class="skill-progress">
-                                <span style="width: 90%"></span>
+                                <span style="width: 70%;"></span>
                             </div>
                         </div>
                         <div class="skill-bar">
                             <div class="skill-info">
                                 <span>SQL</span>
-                                <span>70%</span>
+                                <span>50%</span>
                             </div>
                             <div class="skill-progress">
-                                <span style="width: 70%"></span>
+                                <span style="width: 50%;"></span>
                             </div>
                         </div>
                         <div class="skill-bar">
                             <div class="skill-info">
                                 <span>Python</span>
+                                <span>50%</span>
+                            </div>
+                            <div class="skill-progress">
+                                <span style="width: 50%;"></span>
+                            </div>
+                        </div>
+                        <div class="skill-bar">
+                            <div class="skill-info">
+                                <span>Desenvolvimento Web</span>
                                 <span>65%</span>
                             </div>
                             <div class="skill-progress">
-                                <span style="width: 65%"></span>
+                                <span style="width: 65%;"></span>
+                            </div>
+                        </div>
+                        <div class="skill-bar">
+                            <div class="skill-info">
+                                <span>Figma</span>
+                                <span>65%</span>
+                            </div>
+                            <div class="skill-progress">
+                                <span style="width: 65%;"></span>
+                            </div>
+                        </div>
+                        <div class="skill-bar">
+                            <div class="skill-info">
+                                <span>Adobe Creative Cloud</span>
+                                <span>55%</span>
+                            </div>
+                            <div class="skill-progress">
+                                <span style="width: 55%;"></span>
                             </div>
                         </div>
                     </div>
@@ -140,17 +166,31 @@
                 </div>
                 <div class="skill-card">
                     <div class="skill-icon">
+                        <i class="fas fa-code"></i>
+                    </div>
+                    <h3>Desenvolvimento Web</h3>
+                    <p>Criação de interfaces responsivas e funcionais utilizando HTML, CSS e JavaScript.</p>
+                </div>
+                <div class="skill-card">
+                    <div class="skill-icon">
+                        <i class="fab fa-figma"></i>
+                    </div>
+                    <h3>Figma</h3>
+                    <p>Design de interfaces, prototipagem e criação de experiências de usuário intuitivas.</p>
+                </div>
+                <div class="skill-card">
+                    <div class="skill-icon">
+                        <i class="fas fa-paint-brush"></i>
+                    </div>
+                    <h3>Adobe Creative Cloud</h3>
+                    <p>Criação de elementos visuais, edição de imagens e design gráfico para diversos propósitos.</p>
+                </div>
+                <div class="skill-card">
+                    <div class="skill-icon">
                         <i class="fas fa-robot"></i>
                     </div>
                     <h3>Automação</h3>
                     <p>Power Automate, automação de processos e fluxos de trabalho para eficiência operacional.</p>
-                </div>
-                <div class="skill-card">
-                    <div class="skill-icon">
-                        <i class="fas fa-file-invoice-dollar"></i>
-                    </div>
-                    <h3>Documentos Fiscais</h3>
-                    <p>Conhecimento em CTe, MDFe, ICMS, CFOP e processos de faturamento logístico.</p>
                 </div>
             </div>
         </div>
@@ -265,7 +305,7 @@
                         </div>
                         <div class="contact-text">
                             <h3>Telefone</h3>
-                            <p>(18) 98805-8657</p>
+                            <p>(18) 9 8805-8657</p>
                         </div>
                     </div>
                     <div class="contact-item">
@@ -368,5 +408,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
-
