--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="hero-content">
                 <div class="hero-text">
                     <h1>David Francisco Freire</h1>
-                    <h2>UI/UX Designer | Analista de Dados & Desenvolvedor</h2>
+                    <h2>UI/UX Design | Analista de Dados & Desenvolvedor</h2>
                     <p>Profissional multidisciplinar com mais de 12 anos de experiência em operações, logística, transporte e análises administrativas. Especialista em automação de rotinas e visualização de dados.</p>
                     <div class="hero-btns">
                         <a href="#portfolio" class="btn">Ver Portfólio</a>
@@ -408,3 +408,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
