--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <div class="hero-text">
                     <h1>David Francisco Freire</h1>
                     <h2>UI/UX Design | Analista de Dados & Desenvolvedor</h2>
-                    <p>Profissional multidisciplinar com mais de 12 anos de experiência em operações, logística, transporte e análises administrativas. Especialista em automação de rotinas e visualização de dados.</p>
+                    <p>Profissional multidisciplinar com mais de 12 anos de experiência em operações, logística, transporte, análises administrativas e Designer Gráfico UI/UX. Conhecimento em automação de rotinas, visualização de dados e Criatividade.</p>
                     <div class="hero-btns">
                         <a href="#portfolio" class="btn">Ver Portfólio</a>
                         <a href="#contact" class="btn btn-outline">Contato</a>
@@ -55,7 +55,7 @@
             <h2 class="section-title">Sobre Mim</h2>
             <div class="about-content">
                 <div class="about-text">
-                    <p>Profissional multidisciplinar com mais de 12 anos de experiência em operações, logística, transporte e análises administrativas. Graduado em Análise e Desenvolvimento de Sistemas e cursando MBA em Data Science aplicada à Gestão.</p>
+                    <p>Profissional multidisciplinar com mais de 12 anos de experiência em operações, logística, transporte e análises administrativas. Graduado em Análise e Desenvolvimento de Sistemas, MBA em Data Science aplicada à Gestão cursando Pós Graduação em Designer Gráfico UI/UX e Gamificantion.</p>
                     <p>Minha atuação é focada em automação de rotinas, análise de dados operacionais e visualização com Power BI e Excel. Possuo uma visão prática do chão de fábrica aliada ao domínio de ferramentas digitais para otimização de processos.</p>
                     <p>Combinando experiência prática e conhecimento técnico, busco transformar dados em insights acionáveis que impulsionem a eficiência operacional e a tomada de decisão estratégica.</p>
                 </div>
@@ -408,4 +408,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
